<resources>
    <string name="app_name">Online Groceries</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and">By continuing you agree to our Terms of Service and</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_singup">Already have an account? Singup</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="get_your_groceries_nwith_nectar">Get your groceries\nwith nectar</string>
    <string name="_91">+91</string>
    <string name="_9876543210">9876543210</string>
    <string name="or_connect_with_social_media">Or connect with social media</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_your_4_digit_code">Enter your 4-digit code</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="switch_on_your_location_to_stay_in_tune_with_what_s_happening_in_your_area">Switch on your location to stay in tune with what’s happening in your area</string>
    <string name="your_zone">Your Zone</string>
    <string name="your_area">Your Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="organic_banana">Organic Banana</string>
    <string name="_7pcs_priceg">7pcs, Priceg</string>
    <string name="fresh_fruits_n_amp_vegetable"><![CDATA[Fresh Fruits\n & Vegetable]]></string>
    <string name="my_cart">My Cart</string>
    <string name="title_activity_verify_mobile">VerifyMobileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="data_not_found">Data Not Found</string>
    <string name="manual_login">Manual Login</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login">Login !!</string>
    <string name="_4_99">$4.99</string>
    <string name="by_placing_an_order_you_agree_to_our_terms_and_conditions">By placing an order you agree to our Terms And Conditions</string>
    <string name="favorite">Favorite</string>
    <string name="harshdeep_mehta">HarshDeep Mehta</string>
    <string name="harshdeep100_com">harshdeep100@.com</string>
    <string name="order">Order</string>
    <string name="my_details">My Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="promo_code">Promo Code</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="verification">Verification</string>
    <string name="we_will_send_you_otp_one_time_password_on_the_below_mentioned_mobile_number">We will send you OTP (One Time Password) on the below mentioned mobile number.</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="enter_your_emails_and_password">Enter your emails and password</string>
    <string name="go_to_checkout">Go To Checkout</string>
</resources>