<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/title_text"
        android:scaleType="centerCrop"
        android:src="@drawable/mask_img" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/manual_login_button"
        android:lineSpacingExtra="4dp"
        android:text="@string/get_your_groceries_nwith_nectar"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:fontFamily="@font/gilroy_bold"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/manual_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/divider_text"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/custom_bg_btn_lightblue"
        android:gravity="center"
        android:padding="@dimen/_15sdp"
        android:text="@string/manual_login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/divider_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/google_login_button"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/gilroy_medium"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/or_connect_with_social_media"
        android:textColor="#A0A0A0"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/google_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/facebook_login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:padding="@dimen/_15sdp"
        android:gravity="center"
        android:background="@drawable/custom_bg_btn_lightblue"
        android:drawablePadding="8dp"
        android:text="@string/continue_with_google"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:padding="@dimen/_15sdp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@drawable/custom_bg_btn_darkblue"
        android:drawablePadding="8dp"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/white" />

</RelativeLayout>
