<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SelectLocationActivity">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:src="@drawable/img_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/select_your_location"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:fontFamily="@font/gilroy_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/switch_on_your_location_to_stay_in_tune_with_what_s_happening_in_your_area"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_location_submit"
        android:layout_marginBottom="@dimen/_35sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/your_zone"
            android:textSize="16sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/round_border_bg"
            android:hint="User Name"
            android:inputType="number"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/light_gray"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/your_area"
            android:textSize="16sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/round_border_bg"
            android:hint="User Name"
            android:inputType="number"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/light_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_location_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_35sdp"
        android:background="@drawable/custom_bg_btn"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />
</RelativeLayout>